--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django-crispy-forms==1.13.0
 django-environ==0.9.0
 django-heroku==0.3.1
 gunicorn==20.1.0
-psycopg2==2.7.7
+#psycopg2==2.7.7
 pytz==2022.6
 sqlparse==0.4.3
 typing_extensions==4.1.1
